[block-expand] Fix Show More/Less link alignment. Closes #424, #441 (#447)

--- a/src/block/expand/style.scss
+++ b/src/block/expand/style.scss
@@ -23,7 +23,9 @@
 	.ugb-expand__more-toggle-text {
 		display: none;
 	}
-	.ugb-expand__more-text,
+	.ugb-expand__more-text {
+		display: block !important;
+	}
 	.ugb-expand__less-toggle-text {
 		display: inline-block !important;
 	}
